syntax = "proto3";

package micros.notification.v1;

// PushPlatform for push notifications.
enum PushPlatform {
  PUSH_PLATFORM_UNSPECIFIED = 0;
  PUSH_PLATFORM_FCM = 1;
  PUSH_PLATFORM_APNS = 2;
}

// SendPushRequest for sending a push notification.
message SendPushRequest {
  // Device token (FCM registration token or APNS device token).
  string device_token = 1;

  // Target platform.
  PushPlatform platform = 2;

  // Notification title.
  string title = 3;

  // Notification body.
  string body = 4;

  // Custom data payload.
  map<string, string> data = 5;

  // Metadata key-value pairs for tracking.
  map<string, string> metadata = 6;
}

// SendPushResponse after sending a push notification.
message SendPushResponse {
  // Unique notification identifier.
  string notification_id = 1;

  // Current status (queued, sent, etc.).
  string status = 2;

  // Channel (always "push" for this response).
  string channel = 3;
}
